After trying about every solution I could find, the best consistent fix for the text displacement after completion of animations seems to be adding a perspective value to the transform property. I notice it will still displace on certain screen sizes such as the iPad air though, this seems to be due to the rasterization which happens when using transform scaling causing blurry elements to displace once they switch their rendering method after an animation, so the problem isnt entirely solved but its at least better than it was previously, still looking for a better fix

--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ input:focus {
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   animation: growDown 300ms ease-in-out forwards;
-  transform-origin: top center
+  transform-origin: top center;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -213,12 +213,12 @@ input:focus {
 
 @keyframes growDown {
     0% {
-        transform: scaleY(0)
+        transform: perspective(1px) scaleY(0)
     }
     80% {
-        transform: scaleY(1.1)
+        transform: perspective(1px) scaleY(1.1)
     }
     100% {
-        transform: scaleY(1)
+        transform: perspective(1px) scaleY(1)
     }
 }
